fixed image overlapping card

--- a/public/assets/css/cards.css
+++ b/public/assets/css/cards.css
@@ -1,5 +1,5 @@
 .card-cat {
-    --card-height:400px;
+    --card-height   : 400px;
     height          : var(--card-height);
     border-radius   : 8px;
     background-color: var(--primary-color);
@@ -8,7 +8,7 @@
 }
 
 .card-img-top {
-    height    : calc(var(--height-image-card) * 62.5%);
+    height    : 62.5%;
     object-fit: cover;
 }
 
